# basic_backend_kurs

./: README.md  main.py  pyproject.toml
src/: utils.py
tests/: test_utils.py
